syntax = "proto3";

package autokitteh.users.v1;

// `display_name` is a human-readable name for the user.
// `name` is a globally unique symbol for the user.
message User {
  string user_id = 1;
  string email = 2; // if email is empty, user cannot login.
  string name = 3;
  string display_name = 4;
  bool disabled = 5;
  string default_org_id = 6; // org to use for projects, if not otherwise specified.
}
